# voltgate

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bootstrap.ps1  bootstrap.sh  config.toml  docker-compose.yml  nginx.conf
examples/: completions_stream.js  completions_stream.py  curl_completions.sh
src/: acp.rs  auth.rs  classifier.rs  context_engine.rs  dashboard.rs  database.rs  docs.rs  embeddings.rs  fallback.rs  guardrails.rs  lib.rs  main.rs  metrics.rs  models.rs  proxy.rs  rate_limiter.rs  retry.rs  state.rs  streaming.rs  webhook.rs
tests/: test_context_engine.rs  test_fallback.rs  test_guardrails.rs  test_models.rs  test_rate_limiter.rs  test_retry.rs  test_webhook.rs
