[package]
name        = "voltgate"
version     = "0.1.0"
edition     = "2021"
description = "VoltGate — Open-source LLM router proxy for Anthropic models"

[[bin]]
name = "voltgate"
path = "src/main.rs"

[lib]
name = "voltgate"
path = "src/lib.rs"

[dependencies]
axum               = { version = "0.7",  features = ["json"] }
tokio               = { version = "1",    features = ["full"] }
reqwest             = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
rusqlite            = { version = "0.31", features = ["bundled"] }
toml                = "0.8"
dotenvy             = "0.15"
uuid                = { version = "=1.10.0", features = ["v4"] }
chrono              = { version = "0.4",  features = ["serde"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3",  features = ["env-filter", "fmt"] }
tower               = "0.4"
tower-http          = { version = "0.5",  features = ["cors", "trace"] }
sha2                = "0.10"
hex                 = "0.4"
async-trait         = "0.1"
thiserror           = "1"
once_cell           = "1"
rand                = "0.8"
futures             = "0.3"
async-stream        = "0.3"
redis               = { version = "0.25", features = ["tokio-comp"] }


# ── Pinned versions ──────────────────────────────────────────────────────
# These exact pins are required for compatibility with Rust 1.75 (the
# version available via `apt install rustc cargo` on Ubuntu 24.04).
# Newer releases of url/idna/hashbrown/indexmap/getrandom/uuid have moved
# to the `edition2024` Cargo feature, which older cargo cannot parse.
# If you have Rust 1.85+ installed (e.g. via rustup), you can safely
# remove these pins and let cargo pick the latest compatible versions.
url                 = "=2.4.1"
idna                = "=0.4.0"
hashbrown           = "=0.14.5"
indexmap            = "=2.2.6"
getrandom           = "=0.2.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
